# JoltQC

./: .gitignore  CONTRIBUTING.md  GEMINI.md  INVESTIGATION_CUDA_CORRUPTION.md  README.md  TODO  __init__.py  debug_ecp_params.py  debug_ipip.py  debug_kernel_execution.py  debug_p_orbitals.py  debug_s_orbitals.py  debug_type2_ip.py  debug_values.py  pyproject.toml  requirements.txt  sensitive_info_result.txt  setenv.sh  test_cuda_compilation.py  test_ecp_ip_isolated.py
benchmarks/: benchmark_algorithms.py  benchmark_dft.py  benchmark_ecp_compilation.py  benchmark_jk.py  benchmark_jk_algorithms.py  benchmark_nr_nlc_vxc.py  benchmark_numint.py  benchmark_rho.py  benchmark_scf.py  benchmark_vxc.py  benchmark_wb97mv_def2-tzvpd_20250909_233411.json  benchmark_wb97mv_def2-tzvpd_20250910_000319.json  benchmark_wb97mv_def2-tzvpd_20250911_091723.json  benchmark_wb97mv_def2-tzvpd_jqc_20251001_172611.json  benchmark_wb97mv_def2-tzvpd_jqc_20251109_185306.json  benchmark_wb97mv_def2-tzvpd_jqc_20251111_125543.json  benchmark_wb97mv_def2-tzvpd_jqc_20251128_100808.json  benchmark_wb97mv_def2-tzvpd_jqc_20251128_143455.json  benchmark_wb97mv_def2-tzvpd_jqc_20251128_171839.json  benchmark_wb97mv_molecules.py  benchmark_wb97mv_molecules_jqc.py  compare_benchmark_wb97mv.py  test_2d_simple.py  test_angular_momentum.py
examples/: 00-gpu4pyscf_scf.py  00-pyscf_scf.py  01-dump_cuda_code.py  01-mixed_precision_scf.py  01-patch_gpu4pyscf_ecp.py  01-pyscf_dft.py  02-mixed_precision.py  03-analyze_cuda_kernel.py  03-generate_cuda_ptx.py  03-gpu4pyscf_dft.py  04-AOT_binaries.py  04-AOT_deployment.py  (+2 more)
(+185 files in other folders)
